--- a/rslang/src/styles.scss
+++ b/rslang/src/styles.scss
@@ -1,1 +1,41 @@
+
+
+@use '@angular/material' as mat;
+@import '~@angular/material/theming';
+@include mat.core();
+
+$rslang-primary:  mat.define-palette(mat.$light-blue-palette, 800, A200, 700);
+$rslang-accent: mat.define-palette(mat.$pink-palette, 100, A200, 900);
+$rslang-warn: mat.define-palette(mat.$red-palette);
+$rslang-theme: mat.define-light-theme((
+  color: (
+    primary: $rslang-primary,
+    accent: $rslang-accent,
+    warn: $rslang-warn,
+  )
+));
+
+
+$rslang-primary-dark: mat.define-palette(mat.$deep-purple-palette, 700, 700, 700, A100);
+$rslang-accent-dark: mat.define-palette(mat.$deep-purple-palette, 200, 100, 900, A100);
+$rslang-warn-dark: mat.define-palette(mat.$red-palette);
+$rslang-theme-dark: mat.define-dark-theme((
+  color: (
+    primary: $rslang-primary-dark,
+    accent: $rslang-accent-dark,
+    warn: $rslang-warn-dark,
+  )
+));
+
+//light theme
+@include angular-material-theme($rslang-theme);
+//dark theme
+.dark-theme-mode{
+  @include angular-material-theme($rslang-theme-dark)
+}
+
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
