feat: add dashboard module with menu

--- a/rslang/src/app/app.component.html
+++ b/rslang/src/app/app.component.html
@@ -1,5 +1,1 @@
-<mat-sidenav-container
-  class="app-content mat-app-background"
-  [ngClass]="{ 'dark-theme-mode': isDarkTheme }"
->
-</mat-sidenav-container>
+<router-outlet></router-outlet>
