feat: add api service with some methods

--- a/rslang/src/app/features/pages/about-team/about-team.component.html
+++ b/rslang/src/app/features/pages/about-team/about-team.component.html
@@ -1,2 +1,3 @@
 <p>about-team works!</p>
-
+<button (click)="onClickGetWordsButton()">getWords</button>
+<button (click)="onClickGetWordButton()">getWord</button>
