--- a/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.html
+++ b/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.html
@@ -23,20 +23,20 @@
         <a matLine *ngIf="isExpanded">Главная</a>
       </mat-list-item>
       <mat-divider color="accent"></mat-divider>
-      <mat-list-item>
-        <mat-icon matListIcon [routerLink]="'learnbook'">auto_stories</mat-icon>
+      <mat-list-item [routerLink]="'learnbook'">
+        <mat-icon matListIcon >auto_stories</mat-icon>
         <a matLine *ngIf="isExpanded">Учебник</a>
       </mat-list-item>
-      <mat-list-item>
-        <mat-icon matListIcon [routerLink]="'games'">smart_toy</mat-icon>
+      <mat-list-item [routerLink]="'games'">
+        <mat-icon matListIcon >smart_toy</mat-icon>
         <a matLine *ngIf="isExpanded">Игры</a>
       </mat-list-item>
-      <mat-list-item>
-        <mat-icon matListIcon [routerLink]="'statistics'">signal_cellular_alt</mat-icon>
+      <mat-list-item [routerLink]="'statistics'">
+        <mat-icon matListIcon >signal_cellular_alt</mat-icon>
         <a matLine *ngIf="isExpanded">Статистика</a>
       </mat-list-item>
-      <mat-list-item>
-        <mat-icon matListIcon [routerLink]="'aboutteam'">emoji_people</mat-icon>
+      <mat-list-item [routerLink]="'aboutteam'">
+        <mat-icon matListIcon >emoji_people</mat-icon>
         <a matLine *ngIf="isExpanded">Команда</a>
       </mat-list-item>
       <mat-divider></mat-divider>
@@ -52,8 +52,7 @@
         <span style="flex: auto"></span>
         <h1>RSLang</h1>
         <span style="flex: auto"></span>
-
-        <button mat-raised-button color="accent">Войти</button>
+      <app-button-accent [title]="'Войти'"></app-button-accent>
       </mat-toolbar-row>
     </mat-toolbar>
     <router-outlet></router-outlet>
