--- a/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
+++ b/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
@@ -16,10 +16,43 @@
     ></app-button-accent>
   </mat-card-actions>
 </mat-card>
+
 <mat-card *ngIf="gameMode">
-  <mat-icon (click)="getAudio()">hearing</mat-icon>
+  <mat-spinner *ngIf="!loadingProgress"></mat-spinner>
+  <div *ngIf="loadingProgress">
+    <span>
+      <mat-icon color="primary" *ngIf="isUserRight==='true'">check_circle</mat-icon>
+    </span>
+    <span>
+      <mat-icon color="warn" *ngIf="isUserRight==='false'">do_not_disturb_on</mat-icon>
+    </span>
+  <button mat-fab color="accent">
+    <img mat-card-avatar [src]="getImage()" alt="answer-image" #imageAnswer *ngIf="isUserRight !== null">
+    <mat-icon (click)="getAudio()" *ngIf="isUserRight === null">hearing</mat-icon>
+  </button>
+<mat-card-subtitle *ngIf="isUserRight !== null">{{wordsForGame[this.currentQuestion].word}}</mat-card-subtitle>
+<mat-card-subtitle *ngIf="isUserRight !== null">{{wordsForGame[this.currentQuestion].wordTranslate}}</mat-card-subtitle>
   <mat-card-content>
-    <button mat-stroked-button color="primary" *ngFor="let option of options; let i=index">{{i+1}} {{option.wordTranslate}}</button>
+    <button
+      mat-stroked-button
+      color="primary"
+      *ngFor="let option of options; let i = index"
+      (click)="checkAnswer(option.word)"
+      [disabled]="isUserRight !== null"
+    >
+
+
+      {{ i + 1 }}
+
+      {{ option.wordTranslate }}
+    </button>
   </mat-card-content>
+  <mat-card-actions *ngIf="isUserRight !== null">
+    <app-button-accent
+      [title]="'Следующий'"
+      (click)="nextQuestion()"
+    ></app-button-accent>
+  </mat-card-actions>
+</div>
 </mat-card>
 <audio src="" #audioPlayer></audio>
