--- a/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
+++ b/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
@@ -1,4 +1,5 @@
-<mat-card *ngIf="!gameMode">
+<div class="game">
+<mat-card *ngIf="!gameMode" >
   <mat-card-title>Аудиовызов</mat-card-title>
   <mat-card-content>Описание игры</mat-card-content>
   <mat-form-field appearance="fill">
@@ -21,38 +22,58 @@
   <mat-spinner *ngIf="!loadingProgress"></mat-spinner>
   <div *ngIf="loadingProgress">
     <span>
-      <mat-icon color="primary" *ngIf="isUserRight==='true'">check_circle</mat-icon>
+      <mat-icon color="primary" *ngIf="isUserRight === 'true'"
+        >check_circle</mat-icon
+      >
     </span>
     <span>
-      <mat-icon color="warn" *ngIf="isUserRight==='false'">do_not_disturb_on</mat-icon>
+      <mat-icon color="warn" *ngIf="isUserRight === 'false'"
+        >do_not_disturb_on</mat-icon
+      >
     </span>
-  <button mat-fab color="accent">
-    <img mat-card-avatar [src]="getImage()" alt="answer-image" #imageAnswer *ngIf="isUserRight !== null">
-    <mat-icon (click)="getAudio()" *ngIf="isUserRight === null">hearing</mat-icon>
-  </button>
-<mat-card-subtitle *ngIf="isUserRight !== null">{{wordsForGame[this.currentQuestion].word}}</mat-card-subtitle>
-<mat-card-subtitle *ngIf="isUserRight !== null">{{wordsForGame[this.currentQuestion].wordTranslate}}</mat-card-subtitle>
-  <mat-card-content>
-    <button
-      mat-stroked-button
-      color="primary"
-      *ngFor="let option of options; let i = index"
-      (click)="checkAnswer(option.word)"
-      [disabled]="isUserRight !== null"
-    >
-
-
-      {{ i + 1 }}
-
-      {{ option.wordTranslate }}
+    <button mat-fab color="accent">
+      <img
+        mat-card-avatar
+        [src]="getImage()"
+        alt="answer-image"
+        #imageAnswer
+        *ngIf="isUserRight !== null"
+      />
+      <mat-icon (click)="getAudio()" *ngIf="isUserRight === null"
+        >hearing</mat-icon
+      >
     </button>
-  </mat-card-content>
-  <mat-card-actions *ngIf="isUserRight !== null">
-    <app-button-accent
-      [title]="'Следующий'"
-      (click)="nextQuestion()"
-    ></app-button-accent>
-  </mat-card-actions>
-</div>
+    <mat-card-subtitle *ngIf="isUserRight !== null">{{
+      wordsForGame[this.currentQuestion].word
+    }}</mat-card-subtitle>
+    <mat-card-subtitle *ngIf="isUserRight !== null">{{
+      wordsForGame[this.currentQuestion].wordTranslate
+    }}</mat-card-subtitle>
+    <mat-card-content>
+      <button
+        mat-stroked-button
+        color="primary"
+        *ngFor="let option of options; let i = index"
+        (click)="checkAnswer(option.word)"
+        [disabled]="isUserRight !== null"
+      >
+        {{ i + 1 }}
+
+        {{ option.wordTranslate }}
+      </button>
+    </mat-card-content>
+    <mat-card-actions *ngIf="isUserRight !== null">
+      <app-button-accent
+        [title]="'Следующий'"
+        (click)="nextQuestion()"
+      ></app-button-accent>
+    </mat-card-actions>
+  </div>
 </mat-card>
+<app-resulting-page
+  [resultsArray]="results"
+  (byPressCloseButton)="showResultsPage = !showResultsPage"
+  *ngIf="showResultsPage"
+></app-resulting-page>
 <audio src="" #audioPlayer></audio>
+</div>
