--- a/rslang/src/styles.scss
+++ b/rslang/src/styles.scss
@@ -39,3 +39,10 @@ $rslang-theme-dark: mat.define-dark-theme((
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+* {
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
