feat: add check for doubles and get words from book

--- a/rslang/src/app/features/pages/about-team/about-team.component.html
+++ b/rslang/src/app/features/pages/about-team/about-team.component.html
@@ -11,3 +11,4 @@
 <button (click)="onClickDeleteUserButton()">DeleteUser</button>
 <button (click)="onClickGetNewTokenButton()">GetNewToken</button>
 <button (click)="onClickGetAllUserWordsButton()">GetAllUserWords</button>
+<app-button-accent (click) = "startAudioChallenge()"[title]="'Запустить аудиовызов(0,15)'"></app-button-accent>
