--- a/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
+++ b/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
@@ -1,7 +1,10 @@
 <div class="game">
 <mat-card *ngIf="!gameMode" >
   <mat-card-title>Аудиовызов</mat-card-title>
-  <mat-card-content>Описание игры</mat-card-content>
+  <mat-card-content>Управление клавишами:<br>
+    'Enter' - следующий вопрос<br>
+    '1...5' - выбор варианта<br>
+    '0' - прослушать слово еще раз</mat-card-content>
   <mat-form-field appearance="fill">
     <mat-label>Выберите уровень</mat-label>
     <mat-select [(ngModel)]="selectedLevel">
