fix: fix footer

--- a/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.scss
+++ b/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.scss
@@ -12,7 +12,8 @@ mat-sidenav-content{
   min-height: 100vh;
 }
 .footer-bar{
-position: fixed;
+position: absolute;
+left:0;
 bottom: 0;
 width:100%;
 }
