feat: add sprint component

--- a/rslang/src/app/features/pages/games/games.component.html
+++ b/rslang/src/app/features/pages/games/games.component.html
@@ -1,1 +1,2 @@
 <app-button-primary [title]="'Аудиовызов'" routerLink="/audiochallenge"></app-button-primary>
+<app-button-primary [title]="'Спринт'" routerLink="/sprint"></app-button-primary>
