feat: add timer to sprint

--- a/rslang/src/app/features/pages/sprint/sprint.component.html
+++ b/rslang/src/app/features/pages/sprint/sprint.component.html
@@ -21,6 +21,7 @@
       <p>
         <span>{{currentQuestion + 1}}</span> / <span>{{wordsForGame.length}}</span>
       </p>
+      <div>{{timeToEndGame}}</div>
       <button mat-fab color="accent" (click)="getAudio()">
         <mat-icon>hearing</mat-icon>
       </button>
