--- a/rslang/src/app/features/pages/sprint/sprint.component.scss
+++ b/rslang/src/app/features/pages/sprint/sprint.component.scss
@@ -9,3 +9,19 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.answer-button {
+  min-width: 120px;
+  display: inline-flex;
+  justify-content: space-between;
+
+  & .mat-button-wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.answer-button .mat-button-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
