--- a/rslang/src/app/features/pages/sprint/sprint.component.html
+++ b/rslang/src/app/features/pages/sprint/sprint.component.html
@@ -24,6 +24,7 @@
   <mat-card *ngIf="gameMode">
     <mat-spinner *ngIf="loadingProgress"></mat-spinner>
     <div *ngIf="!loadingProgress">
+      <div *ngIf="showResultQuestion">{{ isUserRight? 'Правильный ответ' : 'Неправильный ответ'}}</div>
       <p>
         <span>{{currentQuestion + 1}}</span> / <span>{{wordsForGame.length}}</span>
       </p>
@@ -38,10 +39,12 @@
         wordsForGame[this.currentTranslateVariant].wordTranslate
         }}</mat-card-subtitle>
       <mat-card-content>
-        <button [ngClass]="'answer-button'" mat-raised-button color="warn" (click)="checkAnswer(false)">
+        <button [ngClass]="'answer-button'" mat-raised-button color="warn" (click)="checkAnswer(false)"
+          [disabled]="showResultQuestion">
           <mat-icon>arrow_backward</mat-icon><span>Неверно</span>
         </button>
-        <button [ngClass]="'answer-button'" mat-raised-button color="success" (click)="checkAnswer(true)">
+        <button [ngClass]="'answer-button'" mat-raised-button color="success" (click)="checkAnswer(true)"
+          [disabled]="showResultQuestion">
           <span>Верно</span>
           <mat-icon>arrow_forward</mat-icon>
         </button>
