--- a/rslang/src/app/core/components/dashboard/footer/footer.component.html
+++ b/rslang/src/app/core/components/dashboard/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="footer-bar" color="primary">
   <mat-toolbar-row>
     TODO: footer
   </mat-toolbar-row>
