--- a/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.scss
+++ b/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.scss
@@ -1,12 +1,31 @@
-.game{
+
+
+
+.game {
   min-height: 100%;
   text-align: center;
   padding: 5%;
   display: block;
-
-
+  margin-top: auto;
+  .audio-game {
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    .audio-game__options {
+      display: flex;
+     gap: 0.5rem 4%;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-top: 5%;
+    }
+  }
 }
-
-
-
-
+.game__selectors {
+  display: flex;
+  column-gap: 5%;
+  justify-content: center;
+}
+mat-spinner {
+  margin: auto;
+}
