--- a/rslang/src/app/features/pages/games/games.component.html
+++ b/rslang/src/app/features/pages/games/games.component.html
@@ -1,1 +1,15 @@
-<app-button-primary [title]="'Аудиовызов'" routerLink="/audiochallenge"></app-button-primary>
+<div class="games-buttons">
+  <div class="button__outer-wrapper background-primary mat-elevation-z8">
+    <mat-card class="button__inner-wrapper">
+      <div class="button__icon-wrapper">
+      <mat-icon class="button__icon " color="primary">headset_mic</mat-icon>
+      <app-button-accent
+      class="button-start mat-elevation-z8"
+      [title]="'Аудиовызов'"
+      routerLink="/audiochallenge"
+    ></app-button-accent>
+    </div>
+
+    </mat-card>
+  </div>
+</div>
