feat:add styles to game buttons

--- a/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
+++ b/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
@@ -1,5 +1,5 @@
 <div class="game">
-  <mat-card *ngIf="!gameMode" class="audio-game">
+  <mat-card *ngIf="!gameMode" class="audio-game transparent-background">
     <mat-card-title>Аудиовызов</mat-card-title>
     <mat-card-content
       >Управление клавишами:<br />
