--- a/rslang/src/styles.scss
+++ b/rslang/src/styles.scss
@@ -49,23 +49,24 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .background-primary{
   background-color: mat-color($rslang-primary);
 }
-
-.audio-game{
+.audio-game__highlight{
+  color: mat-color($rslang-primary);
+}
+.transparent-background{
   background:#ffffff8f;
-  .audio-game__highlight{
-    color: mat-color($rslang-primary);
-  }
+
 }
 
 .dark-theme-mode{
   .background-primary{
     background-color: mat-color($rslang-primary-dark);
   }
-  .audio-game{
-  background: #424242e3;
   .audio-game__highlight{
     color: mat-color($rslang-accent-dark);
   }
+  .transparent-background{
+  background: #424242e3;
+
   }
 
 }
