--- a/rslang/src/app/features/pages/sprint/sprint.component.html
+++ b/rslang/src/app/features/pages/sprint/sprint.component.html
@@ -1,5 +1,5 @@
 <div class="game">
-  <mat-card *ngIf="!gameMode">
+  <mat-card *ngIf="!gameMode" class="transparent-background">
     <mat-card-title>Спринт</mat-card-title>
     <mat-card-content>Управление клавишами:<br>
       Чтобы выбрать вариант ответа используйте мышь или клавиши влево, вправо<br>
