fix: fix transparence for games cards

--- a/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
+++ b/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
@@ -44,7 +44,7 @@
     </mat-card-actions>
   </mat-card>
 
-  <mat-card *ngIf="gameMode" class="audio-game">
+  <mat-card *ngIf="gameMode" class="audio-game transparent-background">
     <mat-spinner *ngIf="!loadingProgress"></mat-spinner>
     <div *ngIf="loadingProgress">
       <button
