--- a/rslang/src/app/features/pages/sprint/sprint.component.html
+++ b/rslang/src/app/features/pages/sprint/sprint.component.html
@@ -21,7 +21,7 @@
     </mat-card-actions>
   </mat-card>
 
-  <mat-card *ngIf="gameMode">
+  <mat-card *ngIf="gameMode" class="transparent-background">
     <mat-spinner *ngIf="loadingProgress"></mat-spinner>
     <div *ngIf="!loadingProgress">
       <div *ngIf="showResultQuestion">{{ isUserRight? 'Правильный ответ' : 'Неправильный ответ'}}</div>
