--- a/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.html
+++ b/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.html
@@ -1,20 +1,11 @@
-<mat-sidenav-container
-  autosize
-  class="app-content mat-app-background"
-  [ngClass]="{ 'dark-theme-mode': isDarkTheme }"
->
+<mat-sidenav-container autosize class="app-content mat-app-background" [ngClass]="{ 'dark-theme-mode': isDarkTheme }">
   <mat-sidenav #sidenav mode="side" opened="true">
     <mat-toolbar color="primary">
       <mat-toolbar-row>
-        <mat-icon matListIcon >menu_book</mat-icon>
+        <mat-icon matListIcon>menu_book</mat-icon>
         <span style="flex: auto"></span>
-        <mat-icon
-          matListIcon
-          class="chevron-button sidenav-button"
-          (click)="isExpanded = !isExpanded"
-          [ngClass]="{ rotated: isExpanded }"
-          >chevron_right</mat-icon
-        >
+        <mat-icon matListIcon class="chevron-button sidenav-button" (click)="isExpanded = !isExpanded"
+          [ngClass]="{ rotated: isExpanded }">chevron_right</mat-icon>
       </mat-toolbar-row>
     </mat-toolbar>
     <mat-nav-list>
@@ -24,19 +15,19 @@
       </mat-list-item>
       <mat-divider color="accent"></mat-divider>
       <mat-list-item [routerLink]="'learnbook'">
-        <mat-icon matListIcon >auto_stories</mat-icon>
+        <mat-icon matListIcon>auto_stories</mat-icon>
         <a matLine *ngIf="isExpanded">Учебник</a>
       </mat-list-item>
       <mat-list-item [routerLink]="'games'">
-        <mat-icon matListIcon >smart_toy</mat-icon>
+        <mat-icon matListIcon>smart_toy</mat-icon>
         <a matLine *ngIf="isExpanded">Игры</a>
       </mat-list-item>
       <mat-list-item [routerLink]="'statistics'">
-        <mat-icon matListIcon >signal_cellular_alt</mat-icon>
+        <mat-icon matListIcon>signal_cellular_alt</mat-icon>
         <a matLine *ngIf="isExpanded">Статистика</a>
       </mat-list-item>
       <mat-list-item [routerLink]="'aboutteam'">
-        <mat-icon matListIcon >emoji_people</mat-icon>
+        <mat-icon matListIcon>emoji_people</mat-icon>
         <a matLine *ngIf="isExpanded">Команда</a>
       </mat-list-item>
       <mat-divider></mat-divider>
@@ -49,16 +40,16 @@
         <mat-slide-toggle class="settings__toggle" [(ngModel)]="isDarkTheme">
           <mat-icon>bedtime</mat-icon>
         </mat-slide-toggle>
-        <mat-slide-toggle  class="settings__toggle" [(ngModel)]="isBubble">
+        <mat-slide-toggle class="settings__toggle" [(ngModel)]="isBubble">
           <mat-icon>bubble_chart</mat-icon>
         </mat-slide-toggle>
         <span style="flex: auto"></span>
         <h1>RSLang</h1>
         <span style="flex: auto"></span>
-      <app-button-accent [title]="'Войти'"></app-button-accent>
+        <app-button-accent [title]="'Войти'" [routerLink]="'login'"></app-button-accent>
       </mat-toolbar-row>
     </mat-toolbar>
-    <app-milkyway-animation *ngIf ="isBubble"></app-milkyway-animation>
+    <app-milkyway-animation *ngIf="isBubble"></app-milkyway-animation>
     <router-outlet></router-outlet>
     <app-footer class="footer-bar"></app-footer>
   </mat-sidenav-content>
