--- a/rslang/src/app/features/pages/login/login.component.html
+++ b/rslang/src/app/features/pages/login/login.component.html
@@ -1,1 +1,35 @@
-<p>login works!</p>
+<mat-card>
+  <mat-card-title>{{ isLoginPage ? 'Вход в аккаунт' : 'Регистрация'}}</mat-card-title>
+  <mat-card-content>
+    <div class="error-message" *ngIf="isLoginPage && (auth.loginError$ | async) as error">{{ error }}</div>
+    <div class="error-message" *ngIf="!isLoginPage && (createUserError$ | async) as error">{{ error }}</div>
+    <mat-form-field appearance="fill" *ngIf="!isLoginPage">
+      <mat-label>Введите имя</mat-label>
+      <input matInput placeholder="name" [formControl]="name" required>
+      <mat-error *ngIf="email.invalid">{{getNameErrorMessage()}}</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Введите email</mat-label>
+      <input matInput placeholder="name@example.com" [formControl]="email" required>
+      <mat-error *ngIf="email.invalid">{{getEmailErrorMessage()}}</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Введите пароль</mat-label>
+      <input matInput [type]="isHidePassword ? 'password' : 'text'" [formControl]="password" required>
+      <mat-error *ngIf="password.invalid">{{getPasswordErrorMessage()}}</mat-error>
+      <button mat-icon-button matSuffix (click)="isHidePassword = !isHidePassword" [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="isHidePassword">
+        <mat-icon>{{isHidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+      </button>
+    </mat-form-field>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button color="primary" (click)="changeMode()">
+      {{ isLoginPage ? 'Страница регистрации' : 'Страница логина'}}
+    </button>
+    <button (click)="onSubmit()" mat-raised-button color="primary" [disabled]="form.invalid">{{
+      isLoginPage
+      ? 'Войти' :
+      'Зарегистрироваться'}}</button>
+  </mat-card-actions>
+</mat-card>
