--- a/rslang/src/app/features/pages/login/login.component.scss
+++ b/rslang/src/app/features/pages/login/login.component.scss
@@ -29,5 +29,21 @@
 
 .error-message {
   margin-bottom: 20px;
-  color: red;
+}
+
+.avatar-button {
+  margin-bottom: 20px;
+  overflow: hidden;
+}
+
+.file-input {
+  display: none;
+}
+
+.upload-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
