feat: add temporary button to check user settings

--- a/rslang/src/app/features/pages/about-team/about-team.component.html
+++ b/rslang/src/app/features/pages/about-team/about-team.component.html
@@ -11,5 +11,7 @@
 <button (click)="onClickDeleteUserButton()">DeleteUser</button>
 <button (click)="onClickGetNewTokenButton()">GetNewToken</button>
 <button (click)="onClickGetAllUserWordsButton()">GetAllUserWords</button>
+<button (click)="onClickUpsertButton()">Upsert</button>
+<button (click)="onClickGetUpsertButton()">GetUpsert</button>
 <app-button-accent (click)="startAudioChallenge()" [title]="'Запустить аудиовызов(стр 15, разд 0)'"></app-button-accent>
 <app-button-accent (click)="startSprint()" [title]="'Запустить спринт(стр 9, разд 4)'"></app-button-accent>
