--- a/rslang/src/app/features/pages/login/login.component.html
+++ b/rslang/src/app/features/pages/login/login.component.html
@@ -1,6 +1,7 @@
 <mat-card>
   <mat-card-title>{{ isLoginPage ? 'Вход в аккаунт' : 'Регистрация'}}</mat-card-title>
   <mat-card-content>
+    <mat-spinner class="spinner" *ngIf="submitted"></mat-spinner>
     <mat-error class="error-message" *ngIf="isLoginPage && (auth.loginError$ | async) as error">{{ error }}</mat-error>
     <mat-error class="error-message" *ngIf="!isLoginPage && (createUserError$ | async) as error">{{ error }}</mat-error>
     <button *ngIf="!isLoginPage" class="avatar-button" color="primary" mat-fab aria-label="Загрузите свой аватар"
@@ -34,7 +35,7 @@
     <button mat-button color="primary" (click)="changeMode()">
       {{ isLoginPage ? 'Страница регистрации' : 'Страница логина'}}
     </button>
-    <button (click)="onSubmit()" mat-raised-button color="primary" [disabled]="form.invalid">{{
+    <button (click)="onSubmit()" mat-raised-button color="primary" [disabled]="form.invalid || submitted">{{
       isLoginPage
       ? 'Войти' :
       'Зарегистрироваться'}}</button>
