--- a/rslang/src/app/features/pages/login/login.component.scss
+++ b/rslang/src/app/features/pages/login/login.component.scss
@@ -47,3 +47,11 @@
   top: 0;
   left: 0;
 }
+
+.spinner {
+  position: absolute;
+  margin: auto;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
