feat: add games-page styles

--- a/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.html
+++ b/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.html
@@ -44,7 +44,7 @@
           <mat-icon>bubble_chart</mat-icon>
         </mat-slide-toggle>
         <span style="flex: auto"></span>
-        <h1>RSLang</h1>
+        <h1>Rslang</h1>
         <span style="flex: auto"></span>
         <span class="user-name" *ngIf="auth.isAuthenticated">{{ auth.name }}</span>
         <img class="avatar-image" *ngIf="auth.avatarPath" alt="" [src]="auth.avatarPath">
