--- a/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.scss
+++ b/rslang/src/app/core/components/dashboard/wrapper/wrapper.component.scss
@@ -49,3 +49,9 @@ height:2.5rem;
   display: block;
   box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
 }
+h1{
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-family: 'Leckerli One', cursive;
+  font-size: 48px;
+}
