--- a/rslang/src/app/features/pages/games/games.component.html
+++ b/rslang/src/app/features/pages/games/games.component.html
@@ -1,27 +1,43 @@
-
-
 <div class="games-buttons">
-  <div class="button__outer-wrapper background-primary mat-elevation-z8">
-    <mat-card class="button__inner-wrapper">
+  <div class="button__outer-wrapper mat-elevation-z8">
+    <mat-card class="button__inner-wrapper background-primary">
       <div class="button__icon-wrapper">
-      <mat-icon class="button__icon " color="primary">headset_mic</mat-icon>
-      <app-button-accent
-      class="button-start mat-elevation-z8"
-      [title]="'Аудиовызов'"
-      routerLink="/audiochallenge"
-    ></app-button-accent>
-    </div>
-
+        <lord-icon
+          src="https://cdn.lordicon.com/fpipqhrr.json"
+          trigger="loop"
+          colors="primary:#fff,secondary:#fafafa;"
+          class="button__icon"
+          style="width:{{ iconDimension }}px;height:{{ iconDimension }}px"
+        >
+        </lord-icon>
+        <app-button-accent
+          class="button-start mat-elevation-z8"
+          [title]="'Аудиовызов'"
+          routerLink="/audiochallenge"
+        ></app-button-accent>
+      </div>
     </mat-card>
   </div>
-  <div class="button__outer-wrapper background-primary mat-elevation-z8">
-    <mat-card class="button__inner-wrapper">
+  <div class="button__outer-wrapper mat-elevation-z8">
+    <mat-card
+      class="button__inner-wrapper background-primary"
+      id="defineBackground"
+    >
       <div class="button__icon-wrapper">
-      <mat-icon class="button__icon " color="primary">av_timer</mat-icon>
-      <app-button-accent  class="button-start mat-elevation-z8" [title]="'Спринт'" routerLink="/sprint"></app-button-accent>
-
-    </div>
-
+        <lord-icon
+          src="https://cdn.lordicon.com/lywgqtim.json"
+          trigger="loop"
+          colors="primary:#fff,secondary:#fafafa;"
+          class="button__icon"
+          style="width:{{ iconDimension }}px;height:{{ iconDimension }}px"
+        >
+        </lord-icon>
+        <app-button-accent
+          class="button-start mat-elevation-z8"
+          [title]="'Спринт'"
+          routerLink="/sprint"
+        ></app-button-accent>
+      </div>
     </mat-card>
   </div>
 </div>
