--- a/rslang/src/styles.scss
+++ b/rslang/src/styles.scss
@@ -3,6 +3,7 @@
 @use '@angular/material' as mat;
 @import '~@angular/material/theming';
 @include mat.core();
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
 
 $rslang-primary:  mat.define-palette(mat.$light-blue-palette, 800, A200, 700);
 $rslang-accent: mat.define-palette(mat.$pink-palette, 100, A200, 900);
