feat: add footer

--- a/rslang/src/app/core/components/dashboard/footer/footer.component.html
+++ b/rslang/src/app/core/components/dashboard/footer/footer.component.html
@@ -1,5 +1,19 @@
+<footer>
 <mat-toolbar class="footer-bar" color="primary">
   <mat-toolbar-row>
-    TODO: footer
+    <div class="footer-bar__icon">
+      <a href="https://rs.school/js/" class="footer-bar__icon">
+        <img src="https://rs.school/images/rs_school_js.svg" alt="school-icon" class="school-icon"
+      /></a>
+    </div>
+    <span style="flex:auto"></span>
+    <div class="footer-bar__names">
+      <a href="https://github.com/aleshkinpaul" class="footer-bar__link">Pavel Aleshkin</a>
+      <a href="https://github.com/unbiz" class="footer-bar__link">Vladimir Bessonov</a>
+      <a href="https://github.com/rubiaqute" class="footer-bar__link">Inga Baranets</a>
+    </div>
+    <span style="flex:auto"></span>
+    <div class="footer-bar__date">2022</div>
   </mat-toolbar-row>
 </mat-toolbar>
+</footer>
