--- a/rslang/src/app/features/pages/games/games.component.scss
+++ b/rslang/src/app/features/pages/games/games.component.scss
@@ -2,6 +2,12 @@
   padding: 3% 5%;
   width: 40%;
   border-radius: 4px;
+  transition: 0.3s ease-in-out;
+  &:hover{
+    cursor: pointer;
+    box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
+opacity: 80%;
+  }
   .button__inner-wrapper {
     padding: 5%;
     text-align: center;
@@ -33,7 +39,10 @@ gap: 10%;
 margin: auto;
 display: flex;
 justify-content: center;
-padding: 7vh 10vh;
+padding: 6vh 10vh;
+}
+h2{
+  color:white;
 }
 @keyframes animate_grow {
 	0% {
