feat: start styling sprint

--- a/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
+++ b/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.html
@@ -8,9 +8,9 @@
     >
     <mat-card-content
       >Управление клавишами:<br />
-      <span class="audio-game__highlight">'Enter'</span> - следующий вопрос<br />
-      <span class="audio-game__highlight">'1...5'</span> - выбор варианта<br />
-      <span class="audio-game__highlight">'0'</span> - прослушать слово еще
+      <span class="text-primary">'Enter'</span> - следующий вопрос<br />
+      <span class="text-primary">'1...5'</span> - выбор варианта<br />
+      <span class="text-primary">'0'</span> - прослушать слово еще
       раз</mat-card-content
     >
     <div class="game__selectors">
