--- a/rslang/src/app/features/pages/sprint/sprint.component.scss
+++ b/rslang/src/app/features/pages/sprint/sprint.component.scss
@@ -4,10 +4,17 @@
   padding: 5%;
   display: block
 }
-
+.sprint__title {
+  padding: 2% 5%;
+  color: white;
+}
+.game__selectors {
+  display: flex;
+  column-gap: 5%;
+  justify-content: center;
+}
 .mat-spinner {
-  margin-left: auto;
-  margin-right: auto;
+  margin:auto;
 }
 
 .answer-button {
