--- a/rslang/src/app/features/pages/sprint/sprint.component.html
+++ b/rslang/src/app/features/pages/sprint/sprint.component.html
@@ -1,5 +1,5 @@
 <div class="game">
-  <mat-card *ngIf="!gameMode" class="transparent-background">
+  <mat-card *ngIf="!gameMode" class="sprint transparent-background mat-elevation-z8">
     <mat-card-title class="sprint__title background-primary"
       >Спринт</mat-card-title
     >
@@ -29,15 +29,19 @@
     </mat-card-actions>
   </mat-card>
 
-  <mat-card *ngIf="gameMode" class="transparent-background">
+  <mat-card *ngIf="gameMode" class="sprint transparent-background mat-elevation-z8">
     <mat-spinner *ngIf="loadingProgress"></mat-spinner>
     <div *ngIf="!loadingProgress">
-      <div *ngIf="showResultQuestion">{{ isUserRight? 'Правильный ответ' : 'Неправильный ответ'}}</div>
-      <p>
-        <span>{{currentQuestion + 1}}</span> / <span>{{wordsForGame.length}}</span>
-      </p>
+      <div class="indicators">
+        <div
+          class="indicators__indicator mat-elevation-z3"
+          *ngFor="let indicator of [].constructor(wordsForGame.length) ; let i = index"
+          [class.background-primary] = "(i < currentQuestion) && getAnswerResult(i)"
+          [class.background-accent] = "(i < currentQuestion) && !getAnswerResult(i)"
+        ></div>
+      </div>
       <div>{{timeToEndGame}}</div>
-      <button mat-fab color="accent" (click)="getAudio()">
+      <button mat-fab color="accent" class="sprint__hear" (click)="getAudio()">
         <mat-icon>hearing</mat-icon>
       </button>
       <mat-card-subtitle>{{
