--- a/rslang/src/app/shared/components/resulting-page/resulting-page.component.html
+++ b/rslang/src/app/shared/components/resulting-page/resulting-page.component.html
@@ -4,7 +4,7 @@
     <mat-icon color="primary" (click)="closeResults()">cancel</mat-icon>
   </div>
     <mat-card-title>Результаты игры: {{positiveResults.length}}/{{resultsArray.length}}</mat-card-title>
-    <mat-card-subtitle>Правильные</mat-card-subtitle>
+    <mat-card-subtitle *ngIf="positiveResults.length > 0">Правильные</mat-card-subtitle>
     <mat-list class="results__list">
       <mat-list-item *ngFor="let answer of positiveResults; let i = index">
         <div class="results-row">
@@ -28,7 +28,7 @@
         <mat-divider></mat-divider>
       </mat-list-item>
     </mat-list>
-    <mat-card-subtitle>Неправильные</mat-card-subtitle>
+    <mat-card-subtitle *ngIf="negativeResults.length > 0">Неправильные</mat-card-subtitle>
     <mat-list class="results__list">
       <mat-list-item *ngFor="let answer of negativeResults; let i = index">
         <div class="results-row">
