feat: add about team content

--- a/rslang/src/app/features/pages/about-team/about-team.component.html
+++ b/rslang/src/app/features/pages/about-team/about-team.component.html
@@ -1,4 +1,104 @@
-<p>about-team works!</p>
+<div class="wrapper">
+  <h2 class="title text-primary">О команде</h2>
+  <p class="epigraf text-primary">
+    Мы не знали друг друга до этого курса <br />
+    Болтались по свету, земле и воде
+  </p>
+  <mat-card class="member transparent-background">
+    <mat-card-title class="member__title background-primary"
+      >Павел Алёшкин<br>
+      <a
+      href="https://github.com/aleshkinpaul"
+      class="member__link"
+      ><mat-icon>link</mat-icon><span class="member__link-name">aleshkinpaul</span></a
+    ></mat-card-title
+    >
+    <mat-card-content class="member__content">
+      <div class="member__image-wrapper">
+        <img
+          alt="member__avatar"
+          src="./../../../../assets/images/pasha_avatar.png"
+        />
+      </div>
+      <div class="member__description">
+
+        <mat-card-subtitle class="member__subtitle text-primary"
+          >Не выдвигался на оскар, НО:</mat-card-subtitle
+        >
+        <ul>
+          <li>Являюсь тимлидом проекта</li>
+          <li>Разработал архитектуру приложения</li>
+          <li>Создал учебник и карточки слов</li>
+        </ul>
+      </div>
+    </mat-card-content>
+  </mat-card>
+
+    <mat-card class="member transparent-background">
+      <mat-card-title class="member__title background-primary"
+        >Владимир Бессонов<br>
+        <a
+        href="https://github.com/unbiz"
+        class="member__link"
+        ><mat-icon>link</mat-icon><span class="member__link-name">unbiz</span></a
+      ></mat-card-title
+      >
+      <mat-card-content class="member__content">
+        <div class="member__image-wrapper">
+          <img
+            alt="member__avatar"
+            src="./../../../../assets/images/vova_avatar.png"
+          />
+        </div>
+        <div class="member__description">
+
+          <mat-card-subtitle class="member__subtitle text-primary"
+            >Французам не забивал, НО:</mat-card-subtitle
+          >
+          <ul>
+            <li>Настроил работу с сервером</li>
+            <li>Создал игру "Спринт"</li>
+            <li>Разработал компоненты авторизации и статистики</li>
+          </ul>
+        </div>
+      </mat-card-content>
+    </mat-card>
+    <mat-card class="member transparent-background">
+      <mat-card-title class="member__title background-primary"
+        >Инга Баранец<br>
+        <a
+        href="https://github.com/rubiaqute"
+        class="member__link"
+        ><mat-icon>link</mat-icon><span class="member__link-name">rubiaqute</span></a
+      ></mat-card-title
+      >
+      <mat-card-content class="member__content">
+        <div class="member__image-wrapper">
+          <img
+            alt="member__avatar"
+            src="./../../../../assets/images/inga_avatar.png"
+          />
+        </div>
+        <div class="member__description">
+
+          <mat-card-subtitle class="member__subtitle text-primary"
+            >Моим именем не назван город на карте, НО:</mat-card-subtitle
+          >
+          <ul>
+            <li>Разработала игру "Аудиовызов"</li>
+            <li>
+              Создала компоненты главной страницы, меню, и
+              страницы о команде
+            </li>
+            <li>Настроила анимацию и звуковое сопровождение</li>
+          </ul>
+        </div>
+      </mat-card-content>
+    </mat-card>
+
+</div>
+
+<!--
 <div *ngIf="auth.loginError$ | async as error">{{error}}</div>
 <div *ngIf="auth.updateLoginError$ | async as error">{{error}}</div>
 <button (click)="onClickGetWordsButton()">getWords</button>
@@ -15,4 +115,4 @@
 <button (click)="onClickGetUpsertButton()">GetUpsert</button>
 <button (click)="onClickCreateUserWordButton()">CreateUserWord</button>
 <app-button-accent (click)="startAudioChallenge()" [title]="'Запустить аудиовызов(стр 15, разд 0)'"></app-button-accent>
-<app-button-accent (click)="startSprint()" [title]="'Запустить спринт(стр 9, разд 4)'"></app-button-accent>
+<app-button-accent (click)="startSprint()" [title]="'Запустить спринт(стр 9, разд 4)'"></app-button-accent> -->
