--- a/rslang/src/app/features/pages/login/login.component.html
+++ b/rslang/src/app/features/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="transparent-background">
   <mat-card-title>{{ isLoginPage ? 'Вход в аккаунт' : 'Регистрация'}}</mat-card-title>
   <mat-card-content>
     <mat-spinner class="spinner" *ngIf="submitted"></mat-spinner>
