--- a/rslang/src/app/features/pages/about-team/about-team.component.scss
+++ b/rslang/src/app/features/pages/about-team/about-team.component.scss
@@ -1,3 +1,69 @@
 button {
   margin-right: 10px;
 }
+.wrapper {
+  padding: 2% 5%;
+  width: 100%;
+}
+.title {
+  text-align: center;
+  margin-top: 1%;
+  font-size: 36px;
+  text-shadow: 2px;
+  font-style: italic;
+  font-weight: bold;
+}
+.epigraf {
+  font-style: italic;
+  font-weight: bold;
+}
+.member {
+  margin-bottom: 2%;
+  .member__title {
+    padding: 1% 5%;
+    color: white;
+    text-align: center;
+    border-radius: 4px;
+  }
+  .member__content {
+    display: flex;
+    justify-content: space-between;
+  }
+  .member__image-wrapper {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    img {
+      width: 100%;
+      object-fit: contain;
+    }
+  }
+  .member__link {
+    text-decoration: none;
+    display: flex;
+    color:white;
+    gap:1%;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.7em;
+    .member__link-name{
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+  }
+  .member__description {
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    .member__subtitle {
+      text-align: center;
+      font-size: 1.2rem;
+      font-style: italic;
+    }
+  }
+}
