fix: correct punctuation error

--- a/rslang/src/app/features/pages/about-team/about-team.component.html
+++ b/rslang/src/app/features/pages/about-team/about-team.component.html
@@ -87,7 +87,7 @@
           <ul>
             <li>Разработала игру "Аудиовызов"</li>
             <li>
-              Создала компоненты главной страницы, меню, и
+              Создала компоненты главной страницы, меню и
               страницы о команде
             </li>
             <li>Настроила анимацию и звуковое сопровождение</li>
